--- a/_config.yml
+++ b/_config.yml
@@ -80,9 +80,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
+  name             : "Dajiang Suo"
   avatar           : "suo.png"
-  bio              : "Your biography for the left-hand sidebar"
+  bio              : "Assistant Professor, Arizona State University"
   location         : "Arizona, USA"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
