--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Dajiang Suo"
 title_separator          : "-"
 name                     : &name "Dajiang Suo"
-description              : &description "Assistant Professor, Arizona State University"
+description              : &description "Assistant Professor | Arizona State University"
 url                      : https://dajiangsuo.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "dajiangsuo/dajiangsuo.github.io"
