--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Dajiang Suo"
   avatar           : "suo.png"
-  bio              : "Assistant Professor, Arizona State University"
+  bio              : "Assistant Professor | The Polytechnic School | Arizona State University"
   location         : "Arizona, USA"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
